# Control-and-navigation-of-robots

./: README.md  STERO_Projekt_1-3-2.vpp  STERO_Projekt_1-3.vpp  STERO_Projekt_1.vpp  lab_1.md  new_tiago_gazebo.launch.py
lab1/: STERO_Projekt_1-2.vpp
lab1/hello_moveit/: CMakeLists.txt  package.xml
lab1/hello_moveit/config/rviz/: navigation.rviz  navigation_copy.rviz
lab1/hello_moveit/launch/: new_pal_gazebo.launch.py  new_tiago_gazebo.launch.py  new_tiago_nav_bringup.launch.py
lab1/hello_moveit/src/: hello_moveit.cpp  one_grasp.cpp  pick_and_place.cpp  robot_grasping_task.cpp  show_sides_grasps.cpp
lab1/hello_moveit/worlds/: stero.world  stero_old.world
lab1/hello_stero/src/: hello_stero_node.cpp
lab2/: lab2.md
lab2/lab2_tiago/: CMakeLists.txt  package.xml
lab2/lab2_tiago/launch/: new_pal_gazebo.launch.py  new_tiago_gazebo.launch.py  new_tiago_nav_bringup.launch.py
lab4/: CMakeLists.txt  package.xml
lab4/src/: square_nav.cpp  test_nav.cpp
lab5/: package.xml  setup.py
lab5/lab5/: follow_waypoint_nav_client.py  follow_waypoint_nav_server.py  simple_nav.py
lab5/launch/: gazebo.launch.py  stero_naviagtion.launch.py  tiago_nav_bringup.launch.py
lab5/maps/flat/: map.pgm  map.yaml
lab5/models/Flat/: model.config  model.sdf
lab5/models/Hall/Hall/: model.config  model.sdf
lab5/worlds/: flat.world  hall.world
nav_msgs_stero/: CMakeLists.txt  package.xml
nav_msgs_stero/action/: WaypointFollow.action
